# template-project

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml  run_tox.sh  test_requirements.txt  tox.ini
.githooks/: pre-commit
.github/workflows/: tests.yml  tests_component1.yml  tests_component2.yml  tests_component3.yml  tests_component4.yml
components/component1/: pyproject.toml
components/component1/component1/: __init__.py  main.py
components/component1/tests/: __init__.py  test_component1.py
components/component2/: pyproject.toml
components/component2/component2/: __init__.py  main.py
components/component2/tests/: test_component2.py
components/component3/: pyproject.toml
components/component3/component3/: __init__.py  main.py
components/component3/tests/: __init__.py  conftest.py  test_class_parametrization.py  test_component3.py  test_inheritance.py
components/component4/: pyproject.toml  test_requirements.txt
components/component4/component4/: __init__.py  main.py
components/component4/tests/: __init__.py  conftest.py  test_component4.py
