[project]
name = "template-project"
version = "1.0.0"
description = "A template project for a monorepo"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-config=../../tox.ini"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

#[tool.ruff]
#exclude = ["tests"]